--- a/21.md
+++ b/21.md
@@ -378,8 +378,8 @@ Unlike my [Driver-Test-Friend](1000001017.md), I never joined the [Bundeswehr](1
 
 [<a id="12050"/>0] [Good old Buddies](#11002) \
 [<a id="12051"/>1] Meine erste MPU: [https://www.holzheu.de](https://www.holzheu.de/category/recht/mpu) \
-[<a id="12052"/>2] [The Devil is a Squirral](https://dings.site/200100002.md) \
-[<a id="12053"/>3] [God is an Ass-Hole](https://dings.site/200100003.md)
+[<a id="12052"/>2] [The Devil is a Squirral](200100002.md) \
+[<a id="12053"/>3] [God is an Ass-Hole](200100003.md)
 
 ## Day-110: Good old Buddies <a id="11000"/>
 
