Add Comma and make it short

--- a/200100003.md
+++ b/200100003.md
@@ -1,6 +1,6 @@
 # God-is-an-Ass-Hole
 
-God-is-an-Ass-Hole is a [Saying](200100000.md) form [Michael_Holzheu](0.md) that compares the [God](647004.md) with an [Ass-Hole](40000037.md).
+God-is-an-Ass-Hole is a [Saying](200100000.md) form [Michael_Holzheu](0.md), that compares [God](647004.md) with an [Ass-Hole](40000037.md).
 
 ## Translations
 
