Add Non-Breaking-Spaces and remove White-Space

--- a/21.md
+++ b/21.md
@@ -315,7 +315,7 @@ I meet the depressive [Roland](150000008.md) at the [Bäckerei-Mayer](2010034.md
 
 In the Following we discuss many [Concepts](600011.md) of [Parallism](10000103.md) in [Computer-Systems](9000153.md) and because my [Colleague](180000010.md) is especially experienced in [Hardware](9400000.md), he of course understands the Principles of Computer-Architectures, but he also seems to be quite familiar with the [Concepts](600011.md) of [Operating-Systems](9100000.md) and [Applications](9000055.md).
 
-After about 30 Minutes Talk, I am almost sure to the have found One out of 10.000, who could claim to have "understood" most of this crazy [Technology](60044.md) - Perhaps not quite at my Level yet, but nevertheless a *really* good [Man](40080022.md)!
+After about 30 Minutes Talk, I am almost sure to the have found One out of 10.000, who could claim to have "understood" most of this crazy [Technology](60044.md)&nbsp;-&nbsp;Perhaps not quite at my Level yet, but nevertheless a *really* good [Man](40080022.md)!
 
 ### Footnotes
 
@@ -358,7 +358,7 @@ Which might be true, but my personal [Suspicion](670033.md) since several Weeks 
 
 > God is an Ass-Hole [[3]](#12053).
 
-Unfortunately I know neither One nor the Other, so I have to rely on Myself and anyway - I am *the* [Man](40080022.md) here! Perhaps that was a little [Over-Estimation](41010007.md), because shortly later out of [Carelessness](41010008.md) I overlook a [30-Kmh-Zone-Sign](1100000005.md):
+Unfortunately I know neither One nor the Other, so I have to rely on Myself and anyway&nbsp;-&nbsp;I am *the* [Man](40080022.md) here! Perhaps that was a little [Over-Estimation](41010007.md), because shortly later out of [Carelessness](41010008.md) I overlook a [30-Kmh-Zone-Sign](1100000005.md):
 
 ![Speed-Limit in Dusslingen](400000099.jpg)
 
@@ -429,7 +429,7 @@ At first I am not too keen on the Action, but after we arrived at the [Kaufland]
 
 That was not a really bad Guess, but in case you want to know it exactly, I recommend my [new App](23.md#10901) to unravel the Mystery playfully.
 
-After our "Work" I feel much better and when I report this back to my Friend, he tells me about the "[Tom_Sawyer](730001.md)-Effect", where even the most boring [Work](60036.md) can make [Fun](60037.md) - if you make it smart.
+After our "Work" I feel much better and when I report this back to my Friend, he tells me about the "[Tom_Sawyer](730001.md)-Effect", where even the most boring [Work](60036.md) can make [Fun](60037.md)&nbsp;-&nbsp;If you make it smart.
 
 The Story he is referring to is from the Book [The_Adventures_of_Tom_Sawyer](71000004.md), where the crafty Tom managed it to make his Friends paint a big Fence with Pleasure.
 
@@ -458,7 +458,7 @@ Although I am a really frustrated about this, I am at least a little bit happy a
 #### Blog-Chain-Time 2023.07.17-13:36 in Tübingen <a id="10602"/>
 ###### Topics: Movie, Profession
 
-I also can strongly recommend the Movie [The-Suicide-Squad](200040007.md) - at least the first Part. Like we [already](#10601) saw with [The-Orville](200030111.md), also here several [Movie-Genres](200300009.md) are combinded.
+I also can strongly recommend the Movie [The-Suicide-Squad](200040007.md)&nbsp;-&nbsp;at least the first Part. Like we [already](#10601) saw with [The-Orville](200030111.md), also here several [Movie-Genres](200300009.md) are combinded.
 
 But this Time instead of the [Science-Fiction-Genre](270000025.md) the [Super-Hero-Genre](270000027.md) plays the [Root-Tone](90000027.md).
 
@@ -593,7 +593,7 @@ After I came back from Stuttgart [Yesterday](#8900), I left [My-Bicycle](1971091
 
 ![Fair Thievery?](400000022.jpg)
 
-Assuming that my World is a bit worse now and for the Person, who commited the [Thievery](670013.md), the World is a bit better, regarding [my](#7001) recent Definition of [Moral](645003.md) the global Result is equal - nevertheless it feels somehow wrong.
+Assuming that my World is a bit worse now and for the Person, who commited the [Thievery](670013.md), the World is a bit better, regarding [my](#7001) recent Definition of [Moral](645003.md) the global Result is equal&nbsp;-&nbsp;nevertheless it feels somehow wrong.
 
 ## Day-89: Diablo IV <a id="8900"/>
 
@@ -623,7 +623,7 @@ Today is my first Day I feel better, so I visited [Nicole](1997080300.md) in Stu
 
 I finished my fifth [MPA](1000001001.md) and it looks good. Both the [Doctor](800002.md) and the [Psychologist](202000014.md) told me that I passed the Test. For some strange Reason I just take Note of their [Decision](60095.md), but don't feel real Happiness about it.
 
-Here a Photo and a Recording from Yesterday Evening in front of the [Kölner-Dom](60100003.md) - come on Michael, [Don't-Worry-Be-Happy](90100004.md):
+Here a Photo and a Recording from Yesterday Evening in front of the [Kölner-Dom](60100003.md)&nbsp;-&nbsp;Come on Michael, [Don't-Worry-Be-Happy](90100004.md):
 
 ![](400000017.jpg)
 
@@ -714,7 +714,7 @@ After all I made the Decision to add my (under Circumstances wrong) Definition t
 >
 > Moral reasoning involves the ability to assess and evaluate the morality of a situation or _decision_, considering factors such as intentions, consequences, rights, and duties. It involves understanding and applying ethical principles and norms to guide behavior and make choices that align with one's moral values.
 
-Not bad at all, isn't it? Well at least it also used the Terms "Decisions" and "Actions" as I did in my Definition respectively Python-Program. 
+Not bad at all, isn't it? Well at least it also used the Terms "Decisions" and "Actions" as I did in my Definition respectively Python-Program.
 
 #### Blog-Chain-Time 2023.06.03-11:00 in Tübingen <a id="7001"/>
 ###### Topics: Philosophics
@@ -1351,7 +1351,7 @@ On my first Smoking-Round I think about a good [Goal](60058.md) for my [Life](60
 
 Had a short Talk with an advanced [Informatics-Student](9999998.md) about [Programming-Languages](9010000.md), who told me that in his Opinion [Java](9010004.md) is an "aristocratic" Language.
 
-Later I read the corresponding Article [[1]](#2252) on [Wikipedia](190000006.md) and learn that orinally [Aristocracy](11000001.md) meant `Rule of the Best` - Good to know.
+Later I read the corresponding Article [[1]](#2252) on [Wikipedia](190000006.md) and learn that orinally [Aristocracy](11000001.md) meant `Rule of the Best`&nbsp;-&nbsp;Good to know.
 
 #### Blog-Chain-Time 2023.04.15-19:OO on my Way back from Nicole <a id="2205"/>
 ###### Topics: Soccer, Money
