--- a/200500006.md
+++ b/200500006.md
@@ -1,3 +1,3 @@
-# Electric-Motor-Bike
+# Electric-Motor-Scooter
 
-An Electric-Motor-Bike is a [Motor-Bike](200500003.md) with [Electric-Motor](200400009.md).
+An Electric-Motor-Scooter is a [Motor-Scooter](404.md) with [Electric-Motor](200400009.md).
