--- a/200500007.md
+++ b/200500007.md
@@ -1,3 +1,5 @@
 # Electric-Motor-Scooter
 
 An Electric-Motor-Scooter is a [Motor-Scooter](200500008.md) with [Electric-Motor](200400009.md).
+
+![Philosophers-Scooter](400000174.jpg)
