--- a/300060001.md
+++ b/300060001.md
@@ -6,10 +6,18 @@ The Bike-Troop-Project is a [Dings-Sub-Project](300000033.md) for the [Realizati
 
 In Areas like [Tübingen](2000001.md) currently there is no good [Solution](600024.md) for [Motor-Bike-Drivers](1100100006.md) for making *legal* [Driving-Lessons](1100000014.md) without *expensive* [Contracts](670037.md) with [Driving-Schools](1100100003.md).
 
-Based on own [Experiences](600096.md) I identified [Potential](60128.md) for [Improvement](60135.md) in several Areas.
+Based on my own [Experiences](600096.md) I identified [Potential](60128.md) for [Improvement](60135.md) in several Fields.
 
 ### Resource-Optimization of Instructors
 
-While I make my Excercises on the [Driving-Training-Ground](1100100004.md) the [Instructors](202000017.md) Sometimes are not required and therefore use their [Idle-Time](600192.md) for [Telephone-Calls](1000020001.md) or [Searching](600091.md) missing [Pylons](1100100007.md) in the [Maize-Field](260100003.md).
+During Excercises on the [Driving-Training-Ground](1100100004.md) the [Instructors](202000017.md) are not always required and therefore they have to fill their [Idle-Time](600192.md) sensibly for [Telephone-Calls](1000020001.md) or [Searching](600091.md) missing [Pylons](1100100007.md) in the [Maize-Field](260100003.md).
 
 As Resource-Optimization I suggest to use the free [Resources](60174.md) for Higher-Value-Tasks like [Teaching](600193.md) and [Supervising](600194.md), which can be achieved by [Queuing](404.md) of multiple [Students](60087.md).
+
+## Risk-Analysis
+
+### Noise-Pollution
+
+For Bike-Troop-Areas near to [Living-Areas](404.md) or [Nature-Reserves](404.md) the [Noise-Pollution](290000001.md) of [Combustion-Engines](200400008.md) cand be avoided by Usage of [Electric-Motorbikes](200500006.md):
+
+![E-Motor-Scooter](400000173.jpg)
