--- a/200500007.md
+++ b/200500007.md
@@ -2,4 +2,6 @@
 
 An Electric-Motor-Scooter is a [Motor-Scooter](200500008.md) with [Electric-Motor](200400009.md).
 
+## Photos
+
 ![Philosophers-Scooter](400000174.jpg)
