--- a/21.md
+++ b/21.md
@@ -328,7 +328,7 @@ After about 30 Minutes Talk, I am almost sure to the have found One out of 10.00
 
 Today I have my [Driving-Test](1100000002.md) on the [Motor-Bike](200500003.md), that finally should finish the endless MPA-Story [[0]](#12050). Because I am sure about my [Victory](60144.md), the [Plan](600045.md) is to deliver a little Farewell-[Show](60010003.md) and pass the Test while looking like a real [Dussel](668001.md). Of course all of the funny Stuff will be recorded with my secret [Helmet-Camera](20000017.md).
 
-To create a perfect [Illusion](60146.md), already in the [Driving-Lessions](1100000014.md) I have made an Effort to play dumb. And obviously that was so convincing, that after numerous really silly [Failures](60074.md), my [Colleague](180000010.md) in greatest [Despair](10000059.md) even ripped out a heavy [Man-Hole-Cover](1102000002.md) with his bare [Hand](40101030.md):
+To create a perfect [Illusion](60146.md), already in the [Driving-Lessions](1100000014.md) I have made an Effort to play dumb&nbsp;-&nbsp;And obviously that was so convincing, that after numerous really silly [Failures](60074.md), my [Colleague](180000010.md) in greatest [Despair](10000059.md) even ripped out a heavy [Man-Hole-Cover](1102000002.md) with his bare [Hand](40101030.md):
 
 ![Despair in Dusslingen](400000101.jpg)
 
