--- a/130000035.md
+++ b/130000035.md
@@ -1,6 +1,6 @@
 # Profit
 
-The Profit is the [Difference](13000027.md) between [Revenue](404.md) and [Expense](404.md).
+The Profit is the [Difference](13000027.md) between [Revenue](130000036.md) and [Expense](130000037.md).
 
 ## Mathematics
 
