--- a/14100002.md
+++ b/14100002.md
@@ -1,3 +1,3 @@
 # Fortune-Telling
 
-Fortune-Telling is a [Method](600108.md) of a [Spiritism-System](404.md).
+Fortune-Telling is a [Method](600108.md) of a [Spiritism-System](14100003.md).
