Add References and improve Text

--- a/300070001.md
+++ b/300070001.md
@@ -12,12 +12,12 @@ On the one Hand this provides some Convenience for the User, but on the Other al
 
 When one Source-File is used in multiple Projects, it is duplicated in every Project-File, which brings serveral Drawbacks:
 
-- Duplicate-Work: When the Source-File is changed, it has to be changed in every Project.
-- Duplicate-Storage: For n Projects each Source-File is stored n Times and therefore requires n Times the Storage
+- Duplicate Work: When the Source-File is changed, it has to be updated in every Project-File.
+- Duplicate Storage: For n Projects each Source-File is stored n Times and therefore requires n Times the [Storage](9000020.md).
 
 ### Problems with Version-Control-Systems <a id="1020"/>
 
-- Each small Change in the Project updates the (often binary) Project-File and therefore n Changes require n Times the Storage in a Version-Control-System.
+- Each small Change in the Project updates the (often binary) Project-File and therefore n Changes require n Times the Storage in a [Version-Control-System](9000005.md).
 
 ## Solution <a id="2000"/>
 
