--- a/300000034.md
+++ b/300000034.md
@@ -1,3 +1,3 @@
-# Dings-Donate-Information
+# Dings-Payment-Information
 
-Dings-Donate-Information is [Information](60007.md), how to give a [Donation](404.md) to the [Dings-Project](300000006.md).
+Dings-Payment-Information is [Information](60007.md), how to give a [Payment](404.md) to the [Dings-Project](300000006.md).
