--- a/130000039.md
+++ b/130000039.md
@@ -1,3 +1,3 @@
 # Value-Liability
 
-A Value-Liability is the [Opposite](60103.md) of a [Value-Claim](404.md).
+A Value-Liability is the [Opposite](60103.md) of a [Value-Claim](130000040.md).
