Fix Equation and improve Text-Layout

--- a/23.md
+++ b/23.md
@@ -375,9 +375,9 @@ Of course this must be a [White-Lie](600161.md) to make me feel better - such a 
 
 Then I read further and get to know, that [My-Female-Choir-Friend](1971091160.md) now also did a [Verification](600128.md) with her [Personal-Computer](404.md):
 
-> Nun habe ich in Excel nachgerechnet: F = (2^7)^(1/12) = 1,498307076877
+> Nun habe ich in Excel nachgerechnet: `F = (2^7)^(1/12) = 1,498307076877`
 
-Well, of course we know that there are old Versions of [Excel](2000221.md) that produced wrong Results and oh Boy, we all remember the really nasty [Pentium-FDIV-Bug](72000002.md) from 1994, but what is the [Likelihood](600031.md), that my Friend is really affected by those Threats?
+Well, of course we know that there are old Versions of [Excel](2000221.md) that produced wrong Results and oh Boy, we all remember the really nasty [Pentium-FDIV-Bug](72000002.md) from 1994&nbsp;-&nbsp;But what is the [Likelihood](600031.md), that my Friend is really affected by those Threats?
 
 And BTW, since serveral Years I get more and more the Impression that our [Development](404.md) is going into the wrong Direction, namely from [The-Better](60136.md) to [The-Worse](60153.md). A good Example is this 20-Year old and still comfortable [Running-Shoe](404.md), as seen Today in the early Evening:
 
