--- a/300000034.md
+++ b/300000034.md
@@ -1,3 +1,72 @@
 # Dings-Payment-Information
 
-Dings-Payment-Information is [Information](60007.md), how to give a [Payment](404.md) to the [Dings-Project](300000006.md).
+Dings-Payment-Information is [Information](60007.md) on how to give a [Payment](130000038.md) to the [Dings-Project](300000006.md).
+
+## How much should I pay?
+
+To get a Feeling for the Value of Something you received from the Dings-Project try to compare it to something Pyhsical, for Example ask yourself, how much German-Brezels was that worth?
+
+For the 
+
+## How is the Paying-Process?
+
+You are free to choose if you want to make an Anonymous-Payment, New-User-Payment or Exisiting-User-Payment, depending on the Type the Purpose, the new Dings-Name or the Dings-Number of the Dings-User should be specified.
+
+### Purpose
+
+Specify the Purpose with a short Sentence with an optional Link to the Content, for Example:
+
+```
+Nice Zero-Wave-Theory!
+```
+
+```
+Interesting Pythagorean Comma: https://dings.site/23.html#9100
+```
+
+### New User
+
+If you want to be registered as a *new* Dings-User, specify the desired User-Name in front of the Purpose&nbsp;-&nbsp;This can be either a Nick-Name, your Fore-Name or your full Name, for Example:
+
+```
+Physics-Geek
+Nice Zero-Wave-Theory!
+```
+
+```
+Nicola
+Funny Dussel: https://dings.site/21.html#12000
+```
+
+```
+Max-Friedrich_Mustermann-Mayer
+Good Idea: https://dings.site/21.html#17003
+```
+
+I then will create a new Dings-User for you together with a new Dings-Number, which you can use for your next Payment.
+
+### Existing Dings-User
+
+If you are already a registered Dings-User, you can specify your Dings-Number for your Paymment, for Example:
+
+```
+Roxana_Stanciu (1997080300)
+I like my Picture: https://dings.site/1997080300.html
+```
+
+## Payment-Methods
+
+### PayPal
+
+Using PayPal, you can use the [Dings-Pay-Pal-Link](300000036.md) or as an Altenative you can use the following [QR-Code](2000231.md):
+
+### Bank-Transfer
+
+Use the following Bank-Liason:
+
+```
+Michael Holzheu
+Sparkasse Pforzheim-Calw
+BIC: PZHSDE66XXX
+IBAN: DE26 6665 0085 0004 4521 27
+```
