--- a/8001000.md
+++ b/8001000.md
@@ -1,3 +1,3 @@
-# Überweisungsschein
+# Überweisungs-Schein
 
-An Überweisungsschein is a [Document](700001.md) in the [German-Medical-System](8000999.md).
+An Überweisungs-Schein is a [Document](700001.md) in the [German-Medical-System](8000999.md).
