Remove Illness-Information

--- a/88.md
+++ b/88.md
@@ -1,70 +1,3 @@
 # My-Fellow-Occupant
 
-My-Fellow-Occupant is a [Woman](40000010.md), who suffers from a [Disease](40800000.md) with a Variety of [Symptoms](600048.md).
-
-## Table-Of-Contents
-
-- [Medical-Findings](#1100) of the Illness
-- [Day-25](#1000) At the Family-Doctor Dr-H (#1000)
-
-## Medical-Drug-Therapy <a id="2500"/>
-
-Daily [Medical-Drug-Dosis](800013.md):
-
-- [Keppra](810001.md): 1000-1500 mg
-- [Lamotrigin](810002.md): 100 mg
-
-## Medical-Findings <a id="2000"/>
-
-### Neurologic-System <a id="2100"/>
-
-#### Head-Pain
-
-- Buildings
-    - The Pain especially increases in Buildings and it decreases, when the [Patient](800010.md) goes Outside.
-    - Inside our [House](1971091101.md) there are Rooms that have different Pain-Levels:
-        1. Bed-Room-2 (Highest Pain)
-        2. Living-Room
-        3. Store-Room
-        4. Cellar-Room
-    - The Patient already tested over 40 Buildings that all trigger much more Head-Pain than our [House](1971091101.md).
-- The Pain moves from the [Back-Of-Head](40080002.md), over the [Back](40080003.md) into the [Gastro-Intestinal-System](40080004.md).
-
-#### Assymetric Body-Halfs <a id="2200"/>
-
-Sometimes the two [Body-Halfs](40000014.md) differently pronounced [Symptoms](600048.md), e.g. reddened [Eyes](40101001.md).
-
-#### Various Body-Symptoms
-
-The Patient reports numb [Lips](40101020.md) and Upper-[Arms](40101010.md) as well as [Tingling](40201001.md) in her [Hands](40101030.md).
-
-[Doktor-Holzheu](1971091177.md) observes multiple Times reddened [Eyes](40101001.md) and sometimes little [Trembling](10000041.md) in her [Hands](40101030.md).
-
-#### Respiration-System <a id="2300"/>
-
-The Patient shows Symptoms like constant [Coughing](48000006.md) and [Throat-Clearing](40080015.md). The Production of [Slime](40080018.md) is always is increased and as a Result the Patient has to use [Spitting](40080019.md) for getting rid of the [Secretives](40080021.md).
-
-#### Mental-System <a id="2400"/>
-
-The Patient shows regular [Rage-Attacks](48000008.md) that e.g. manifest themselves in Arguments with the [Room-Mate](0.md), Neighbors or Passersbys. Also multiple Times the Patient threatens to call the Police for rather small Issues.
-
-Zittern, Kribbeln
-Blutende Hände (Foto)
-Rote Ohren
-Durchfall
-Bauchkrämpfe
-Regelmäßiges Übergeben
-Harndrang: Macht sich fast in die Hose, Muss sehr viel trinken 4-6 Liter
-Allgemein extrem Empfindlich: Duft, Rauchen, Lärm
-
-- Sometimes not 
-
-
-## Day-25 At the Family-Doctor Mr-H <a id="1000"/>
-
-#### Blog-Chain-Time 2023.04.18-08:OO at the Doctor-Office <a id="2403"/>
-###### Topics: Dr-H
-
-We go the Office-Hours of [Dr-H](1000010001.md) where My-Fellow reported about her Illness. The [Anti-Histamin](800005.md) that she tried, dit not show a positive [Effect](60067.md).
-
-Then we come to the Topic the Drug [Triptan](48000005.md)
+My-Fellow-Occupant is a [Woman](40000010.md).
