--- a/1971100001.md
+++ b/1971100001.md
@@ -18,11 +18,11 @@ I performed a little Song-Potpourri with my Duke, which we worked on a few weeks
 
 ## Time-Stamps <a id="2000"/>
 
-00:43 What a Wonderful World
-03:02 Ide weré weré
-03:42 Hallelujah
-04:34 Yesterday
-05:05 Streets of London
+- 00:43 What a Wonderful World
+- 03:02 Ide weré weré
+- 03:42 Hallelujah
+- 04:34 Yesterday
+- 05:05 Streets of London
 
 ## History <a id="4000"/>
 
