--- a/300000034.md
+++ b/300000034.md
@@ -2,13 +2,24 @@
 
 Dings-Payment-Information is [Information](60007.md) on how to give a [Payment](130000038.md) to the [Dings-Project](300000006.md).
 
+## Why should I pay?
+
+There are several Reasons for giving [Money](6666.md) to the [Dings-Project](300000006.md):
+
+- My [Knowledge](600025.md) is improved by *good* [Explanations](600121.md).
+- My [Business](240000000.md) is improved by *good* [Advertisement](600088.md).
+- My [Free-Time](600201.md) is improved by *good* [Entertainment](60010008.md).
+- My [Goals](60058.md) are supported, for Example regarding [Politics](141000000.md), [Economics](130000000.md), etc.
+
 ## How much should I pay?
 
-To get a Feeling for the Value of Something you received from the Dings-Project try to compare it to something Pyhsical, for Example ask yourself, how much German-Brezels was that worth?
+To get a [Feeling](60041.md) for the [Value](700030.md) you received from the [Dings-Project](300000006.md) try to compare it to something Physical, for Example ask yourself, how much [Brezels](203410001.md) was that worth?
 
-For the 
+For the [Conversion](600037.md) from [Brezel](203410001.md) to [Euro](130000004.md) you can use [My-Brezel-Index](302000003.md), that currently:
 
-## How is the Paying-Process?
+$$ 1 Brezel = 1 Euro $$
+
+## How does the Paying-Process work?
 
 You are free to choose if you want to make an Anonymous-Payment, New-User-Payment or Exisiting-User-Payment, depending on the Type the Purpose, the new Dings-Name or the Dings-Number of the Dings-User should be specified.
 
@@ -53,12 +64,10 @@ If you are already a registered Dings-User, you can specify your Dings-Number fo
 Roxana_Stanciu (1997080300)
 I like my Picture: https://dings.site/1997080300.html
 ```
-
 ## Payment-Methods
 
-### PayPal
-
-Using PayPal, you can use the [Dings-Pay-Pal-Link](300000036.md) or as an Altenative you can use the following [QR-Code](2000231.md):
+- [Dings-Pay-Pal-Link](300000036.md)
+- [Dings-Bank-Liason](300000036.md)
 
 ### Bank-Transfer
 
