--- a/40080024.md
+++ b/40080024.md
@@ -1,3 +1,3 @@
 # Diarrhea
 
-Diarrhea is a [Process](60062.md) of the [Gastro-Intestinal-System](40080004.md) to get rid of [Feces](404.md).
+Diarrhea is a [Process](60062.md) of the [Gastro-Intestinal-System](40080004.md) to get rid of [Feces](40000025.md).
