--- a/40080005.md
+++ b/40080005.md
@@ -1,3 +1,3 @@
 # Human-Respiration-System
 
-The Human-Respiration-System consists out of ...
+This Number-File is no longer maintained, [here](40080017.md) you can find its living Gemini.
