--- a/40000051.md
+++ b/40000051.md
@@ -1,3 +1,3 @@
 # Biologic-Intestinal-System
 
-The Biologic-Intestinal-System is a [Biologic-System](40000021.md) for the [Intestine](40000047.md).
+The Biologic-Intestinal-System is a [Biologic-System](40000021.md) for [Biologic-Digestion](40000055.md).
