--- a/40000050.md
+++ b/40000050.md
@@ -1,3 +1,3 @@
 # Biologic-Gastro-System
 
-The Biologic-Gastro-System is a [Biologic-System](40000021.md) for [Biologic-Digestion](40000055.md).
+The Biologic-Gastro-System is a [Biologic-System](40000021.md) for [Biologic-Digestion](40000055.md) with a [Stomach](40000046.md).
