--- a/40000059.md
+++ b/40000059.md
@@ -1,3 +1,3 @@
 # Biologic-Neurologic-Communication-System
 
-A Biologic-Neurologic-Communication-System is a [Biologic-System](40000021.md) for [Biologic-Internal-Communication](40000057.md) with [Nerves](40000048.md) and [Neurons](404.md).
+A Biologic-Neurologic-Communication-System is a [Biologic-System](40000021.md) for [Biologic-Internal-Communication](40000057.md) with [Nerves](40000048.md) and [Neurons](40000060.md).
