--- a/40080004.md
+++ b/40080004.md
@@ -1,3 +1,3 @@
 # Human-Gastro-Intestinal-System
 
-The Human-Gastro-Intestinal-System consists out of ...
+The Human-Gastro-Intestinal-System is a [Gastro-Intestinal-System](40000052.md) for a [Human](40000001.md).
