--- a/40080006.md
+++ b/40080006.md
@@ -1,3 +1,3 @@
 # Human-Neurologic-System
 
-The Human-Neurologic-System consists out of ...
+The Human-Neurologic-System is a [Neurologic-System](40000062.md) for a [Human](40000001.md).
