--- a/60006.md
+++ b/60006.md
@@ -1,3 +1,3 @@
 # Connection
 
-A Connection allows to transfer [Information](60007.md) between [Things](60002.md).
+A Connection a [System](60052.md) for [Transfer](404.md) of [Information](60007.md) between [Things](60002.md).
