--- a/60102.md
+++ b/60102.md
@@ -1,3 +1,3 @@
 # Separation
 
-Separation is the [Inverse](404.md) of [Connection](60006.md).
+Separation is the [Opposite](60103.md) of [Connection](60006.md).
