--- a/40000063.md
+++ b/40000063.md
@@ -1,3 +1,3 @@
-# Biologic-Delimination-Process
+# Biologic-Shielding-Process
 
-A Biologic-Deliminatino-Process is a [Delimination-Process](404.md) in a [Biologic-System](40000021.md).
+A Biologic-Shielding-Process is a [Shielding-Process](404.md) in a [Biologic-System](40000021.md).
