--- a/40080013.md
+++ b/40080013.md
@@ -1,3 +1,3 @@
 # Human-Dermatological-System
 
-The Human-Dermatological-System is a [System](60052.md) for the [Skin](40100005.md) of a [Human-Body](40080000.md).
+The Human-Dermatological-System [Dermatological-System](40000064.md) for a [Human](40000001.md).
