--- a/40080017.md
+++ b/40080017.md
@@ -1,3 +1,3 @@
 # Human-Respiration-System
 
-The Human-Respiration-System is ...
+The Human-Respiration-System is [Biologic-Respiration-System](40000056.md) for a [Human](40000001.md).
