--- a/40080015.md
+++ b/40080015.md
@@ -1,3 +1,3 @@
-# Throat-Clearing
+# Human-Awareness-System
 
-Throat-Clearing is a [Process](60062.md) for Clearing the [Throat](40080016.md).
+The Human-Awareness-System is a [Biologic-Awareness-System](40000065.md) for a [Human](40000001.md).
