--- a/8001002.md
+++ b/8001002.md
@@ -1,3 +1,3 @@
 # Universitätsklinikum-Essen
 
-The Universitätsklinikum-Essen is a [Hospital](800016.md) in [Essen](404.md).
+The Universitätsklinikum-Essen is a [Hospital](800016.md) in [Essen](140000077.md).
