--- a/8001001.md
+++ b/8001001.md
@@ -1,3 +1,7 @@
 # Klinikum-der-Universität-München
 
 The Klinikum-der-Universität-München is a [Hospital](800016.md) in [Munich](140000076.md).
+
+## Links
+
+- Home-Page: [https://lmu-klinikum.de](https://lmu-klinikum.de)
