--- a/8001001.md
+++ b/8001001.md
@@ -1,6 +1,6 @@
 # Klinikum-der-Universität-München
 
-The Klinikum-der-Universität-München is a [Hospital](800016.md) in [Munich](140000076.md).
+The Klinikum-der-Universität-München is a [University-Hospital](800023.md) in [Munich](140000076.md).
 
 ## Links
 
