--- a/8001003.md
+++ b/8001003.md
@@ -1,6 +1,6 @@
 # Universitätsklinikum-Hamburg-Eppendorf
 
-The Universitätsklinikum-Hamburg-Eppendorf is a [University-Hospital](800023.md) in [Hamburg](404.md).
+The Universitätsklinikum-Hamburg-Eppendorf is a [University-Hospital](800023.md) in [Hamburg](140000078.md).
 
 ## Links
 
