--- a/8001004.md
+++ b/8001004.md
@@ -1,3 +1,3 @@
 # Zentrum-für-Neurologie-und-Psychiatrie-Duisburg-West
 
-Zentrum-für-Neurologie-und-Psychiatrie-Duisburg-West is a [Medical-Practice](800015.md) in [Duisburg](404.md).
+Zentrum-für-Neurologie-und-Psychiatrie-Duisburg-West is a [Medical-Practice](800015.md) in [Duisburg](140000079.md).
