--- a/8001004.md
+++ b/8001004.md
@@ -1,3 +1,7 @@
 # Zentrum-für-Neurologie-und-Psychiatrie-Duisburg-West
 
 Zentrum-für-Neurologie-und-Psychiatrie-Duisburg-West is a [Medical-Practice](800015.md) in [Duisburg](140000079.md).
+
+## Links
+
+- Home-Page: [https://znp-duisburg.de](https://znp-duisburg.de)
