--- a/8001005.md
+++ b/8001005.md
@@ -1,6 +1,6 @@
 # Universitätsklinikum-CGC-Dresden
 
-The Universitätsklinikum-CGC-Dresden is a [University-Hospital](800023.md) in [Dresden](404.md).
+The Universitätsklinikum-CGC-Dresden is a [University-Hospital](800023.md) in [Dresden](140000080.md).
 
 ## Links
 
