--- a/23.md
+++ b/23.md
@@ -1,4 +1,4 @@
-# About-Dings-Project
+23.md# About-Dings-Project
 
 ## Table of Contents <a id="1"/>
 
@@ -1604,7 +1604,7 @@ $ find . | grep apk
 ./bin/pong-0.1-arm64-v8a_armeabi-v7a-debug.apk
 ```
 
-I can also install the Package on my [S22-Ultra](20000001.md), but unfortunately it crashes.
+I can also install the Package on [My-S22-Ultra](1971091110.md), but unfortunately it crashes.
 
 #### Blog-Chain-Time 2023.05.23-15:46 in Tübingen <a id="5910"/>
 ###### Topics: Kivy, Layouts
