--- a/240000030.md
+++ b/240000030.md
@@ -1,3 +1,3 @@
 # Samsung
 
-Samsung is a [Corporation](240000000.md) from [South-Korea](404.md).
+Samsung is a [Corporation](240000000.md) from [South-Korea](140000082.md).
