--- a/20000001.md
+++ b/20000001.md
@@ -1,3 +1,3 @@
 # Samsung-Galaxy-S22-Ultra
 
-A Samsung-Galaxy-S22-Ultra is a [Smart-Phone](20000005.md) from [Samsung](404.md).
+A Samsung-Galaxy-S22-Ultra is a [Smart-Phone](20000005.md) from [Samsung](240000030.md).
