Rename Git-Clone -> Git-Clone-Command

--- a/300000030.md
+++ b/300000030.md
@@ -1,3 +1,13 @@
 # Dings-Patent
 
 A Dings-Patent is a [Patent](670022.md) in the [Dings-System](300000007.md).
+
+## Termns and Condition
+
+For each Dings-Patent the [Claim](130000040.md) is, that [I](0.md) had the [Idea](600012.md) at a given Time. I can prove this by the Use of a [Block-Chain](2000218.md), where currently the [Git-System](58.md) is used, as well as by Human-[Witnesses](11000004.md), who read the Patent.
+
+
+
+Because I do not do a long Patent-Searches or Web-Searches, it is possible that Others had the same Idea earlier.
+
+
