--- a/300000030.md
+++ b/300000030.md
@@ -1,22 +1,72 @@
-# Dings-Patent
+# Dings-Patent <a id="1"/>
 
 A Dings-Patent is a [Patent](670022.md) in the [Dings-System](300000007.md).
 
-## Terms and Conditions
+## Terms and Conditions <a id="1000"/>
 
-For each Dings-Patent the [Claim](130000040.md) is, that [I](0.md) had the [Idea](600012.md) at a given Time. I can prove this by the Use of a [Block-Chain](2000218.md), where currently the [Git-System](58.md) is used, as well as by Human-[Witnesses](11000004.md), who read the Patent.
+For each Dings-Patent the [Claim](130000040.md) is, that [I](0.md) had the [Idea](600012.md) at a given Time, which can be proven by a [Block-Chain](2000218.md) together with Human-[Witnesses](11000004.md), who downloaded the Chain [[0]](#10001) or even read the Patent by themselfes.
 
-## Git-Usage
+In Case you want to use the Dings-Patent, please contact me with one of [My-Identities](0.md#1000).
 
-The Block-Chain can be downloaded by Every-Body with the [Git-Clone-Command](9000086.md):
+## Block-Chain <a id="2000"/>
+
+Currently the [Git-System](58.md) is used for the Block-Chain, that can be downloaded with the [Git-Clone-Command](9000086.md):
 
 ```bash
 $ git clone git@github.com:All-Dings/0.git
 ```
 
-The History of the Invention can be seen by using the [Git-Log-Command]()
+Next switch to the new Directory with the [Cd-Command](9000115.md):
 
+```bash
+$ cd 0
+```
 
-Because I do not do a long Patent-Searches or Web-Searches, it is possible that Others had the same Idea earlier.
+The History of the Invention can be seen by using the [Git-Log-Command](9000141.md):
 
+```bash
+$ git log --pretty=format:"%h %s" | grep Zero-Wave
+4acd48ce Add Zero-Wave-Device-Topic
+c2c3fc30 Add Zero-Wave-Device-Communication
+5c973ec2 Add Zero-Wave-Device-Patent
+49ec0b1a Add Zero-Wave-Released-Energy
+```
+
+To see Details like the Date of a [Git-Commit](9000070.md), use the [Git-Show-Command](2000234.md):
+
+```bash
+commit 5c973ec27e7220239eb55efc50c153f6b0f140b0
+Author: Michael Holzheu <michael@holzheu.de>
+Date:   Sat Oct 14 20:15:13 2023 +0200
+
+    Add Zero-Wave-Device-Patent
+
+diff --git a/300050001.md b/300050001.md
+new file mode 100644
+index 00000000..86852e0b
+--- /dev/null
++++ b/300050001.md
+$ git show 5c973ec2
++# Zero-Wave-Device-Patent <a id="1000"/>
++
++The Zero-Wave-Device-Patent is a [Dings-Patent](300000030.md) of [Michael_Holzheu](0.md) for a [Zero-Wave-Device](20000021.md).
++
++Status: <font color="red">Draft</font>
+```
+
+For seeing the complete Patent-File for a given Commit, use the [Git-Checkout-Command](9000071.md):
+
+```
+$ git checkout 5c973ec2
+```
+
+Then you can use your favourite Editor, to see the Contents, for Example Vim:
+
+```bash
+$ vi 300050001.md
+```
+
+## Footnotes <a id="10000"/>
+
+[<a id="10001"/>0] [One Block-Chain-Witness](23.md#12010)
 
