--- a/300000030.md
+++ b/300000030.md
@@ -4,9 +4,9 @@ A Dings-Patent is a [Patent](670022.md) in the [Dings-System](300000007.md).
 
 ## Terms and Conditions <a id="1000"/>
 
-For each Dings-Patent the [Claim](130000040.md) is, that [I](0.md) had the [Idea](600012.md) at a given Time, which can be proven by a [Block-Chain](2000218.md) together with Human-[Witnesses](11000004.md), who downloaded the Chain [[0]](#10001) or even read the Patent by themselfes.
+Each Dings-Patent includes the [Claim](130000040.md), that [I](0.md) had the [Idea](600012.md) at a given Time, which can be proven by a [Block-Chain](2000218.md) together with Human-[Witnesses](11000004.md), who downloaded the Chain [[0]](#10001) or even read the Patent by themselfes.
 
-In Case you want to use the Dings-Patent, please contact me with one of [My-Identities](0.md#1000).
+In Case you want to use a Dings-Patent, please contact me with one of [My-Identities](0.md#1000).
 
 ## Block-Chain <a id="2000"/>
 
