--- a/21.md
+++ b/21.md
@@ -419,7 +419,7 @@ Finally I surrender and drive back frustrated to [our](1971091101.md) House, whe
 #### Blog-Chain-Time 2023.07.24-16:01 at the Kaufland <a id="10901"/>
 ###### Topics: Friends, Literature
 
-My dear [Artist-Friend](1971091155.md) will probably soon move back to his old Appartment and therefore he asked me, if I could help him with [my](1971091106.md) Car to dispose his empty Bottles, which he collected in the Basement over a longer Period.
+My dear [Artist-Friend](1971091155.md) will probably soon move back to his old Appartment and therefore he asked me, if I could help him with [my](1971091106.md) Car to dispose his empty Water-Bottles, which he collected in the Basement over a longer Period.
 
 At first I am not too keen on the Action, but after we arrived at the [Kaufland](2010027.md) and I see the big Waste-Mountain in our Shopping-Carts, ...
 
