--- a/300070001.md
+++ b/300070001.md
@@ -4,4 +4,29 @@ The Audience-Inclusion-Project is a [Dings-Sub-Project](300000033.md) for the [R
 
 ## Problem-Statement <a id="1000"/>
 
+The [Audience](600146.md) is an *essential* [Part](60084.md) of an [Event](600085.md), that in our modern World always (at least) has two Aspects:
+
+- [Live-Event](600209.md)
+- [Recorded-Event](600211.md)
+
+But both Aspects have their [Justification](), e.g. the Audience of the Live-Event:
+
+Live-Experience
+
+- Be in the unique Moment
+- Have complete Focus on the Event
+
+Recorded-Experience:
+
+- Remember the Event for the Live-Audience
+- Share the Experience with Friends and Family
+- Actors can Experience what the Audience saw
+
+
 ## Risk-Analysis <a id="2000"/>
+
+Theses two Aspects have (Somtimes conflicting) [Goals](60058.md), regarding [Attention](60175.md) or [Quality](600120.md), because as known from [Physics](10000000.md) each [Measurement](10000022.md) always influences a [System](10000068.md).
+
+## Solution
+
+Influence must not always be Disturbacnce 
