--- a/300050001.md
+++ b/300050001.md
@@ -2,7 +2,9 @@
 
 The Zero-Wave-Device-Patent is a [Dings-Patent](300000030.md) of [Michael_Holzheu](0.md).
 
-- Git-Version and History: [https://github.com](https://github.com/All-Dings/0/commits/Master/300050001.md)
+## Version <a id="1800"/>
+
+Git-Version and History: [https://github.com](https://github.com/All-Dings/0/commits/Master/300050001.md)
 
 ## Abstract <a id="1600"/>
 
