--- a/600213.md
+++ b/600213.md
@@ -1,3 +1,3 @@
 # Search-Information
 
-An Search-Information is [Information](60007.md) for [Access](404.md).
+An Search-Information is [Information](60007.md) for [Searching](600091.md).
