--- a/611002.md
+++ b/611002.md
@@ -1,3 +1,3 @@
 # Address
 
-An Address is an [Access-Key](600213.md) in an [Addressing-System](611001.md).
+An Address is a [Search-Information](600213.md) in an [Addressing-System](611001.md).
