--- a/2000235.md
+++ b/2000235.md
@@ -1,3 +1,3 @@
 # E-Mail-Address
 
-An E-Mail-Address is an [Address](404.md) in an [E-Mail-System](404.md).
+An E-Mail-Address is an [Address](611002.md) in an [E-Mail-System](2000236.md).
