--- a/300070001.md
+++ b/300070001.md
@@ -2,31 +2,34 @@
 
 The Audience-Inclusion-Project is a [Dings-Sub-Project](300000033.md) for the [Realization](600033.md) of [Audience-Inclusion-Movies](600146.md) and other similar Projects.
 
+![Audience View](400000184.jpg)
+
 ## Problem-Statement <a id="1000"/>
 
-The [Audience](600146.md) is an *essential* [Part](60084.md) of an [Event](600085.md), that in our modern World always (at least) has two Aspects:
+The [Audience](600146.md) is an *essential* [Part](60084.md) of every [Event](600085.md), which can be consumed in our modern World often in two different Flavours:
 
 - [Live-Event](600209.md)
 - [Recorded-Event](600211.md)
 
-But both Aspects have their [Justification](), e.g. the Audience of the Live-Event:
+Both Aspects have their [Justification](600178.md) for the Audience of the [Live-Event](600209.md)&nbsp;...
 
-Live-Experience
+- Enjoy the unique Moment.
+- Provide complete Focus on the Event.
 
-- Be in the unique Moment
-- Have complete Focus on the Event
+... as well as for the Audience of the [Recorded-Event](600211.md):
 
-Recorded-Experience:
-
-- Remember the Event for the Live-Audience
-- Share the Experience with Friends and Family
-- Actors can Experience what the Audience saw
-
+- Share the Experience with [Friends](180000002.md) and [Family](180000008.md).
+- Allow the [Actors](202000010.md) to enjoy the Experience of the Audience.
+- Allow the Live-Audience to enjoy the Event multiple Times.
 
 ## Risk-Analysis <a id="2000"/>
 
-Theses two Aspects have (Somtimes conflicting) [Goals](60058.md), regarding [Attention](60175.md) or [Quality](600120.md), because as known from [Physics](10000000.md) each [Measurement](10000022.md) always influences a [System](10000068.md).
+The two Aspects have (Somtimes conflicting) [Goals](60058.md), for Example regarding [Attention](60175.md) or [Quality](600120.md), because as known from [Physics](10000000.md) each [Measurement](10000022.md) always influences the measured [System](10000068.md).
 
-## Solution
+## Current Solution
 
-Influence must not always be Disturbacnce 
+In Order to keep the [Disturbance](600212.md) for the Live-Event at a [Minimum](12000061.md), most of the Time the [Focus](60143.md) of the Recording is on the [Actors](202000010.md), which waste a Lot of [Potential](60128.md), because the [Influence](600126.md) of the [Audience](600146.md) often comes up short.
+
+## Proposed Solution <a id="2000"/>
+
+Provide [Recording-Devices](20000024.md) also to the [Audience](600146.md), that uses them with a [Maximum]() of [Mindfulness](41000010.md).
