--- a/2020001.md
+++ b/2020001.md
@@ -1,3 +1,7 @@
 # Viva-La-Vida-Bloch-Chor
 
 Viva-La-Vida-Bloch-Chor is a [Music-Video](404.md) of [Viva-La-Vida](91000011.md) prduced by [Michael_Holzheu](0.md) with the [Ernst-Bloch-Chor](2010013.md).
+
+## Pictures
+
+![Stylized Screen-Shot](400000184.jpg)
